// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item tests should render a fully populated item 1`] = `
<a
  className="css-arizad"
  href="testurl.com"
  target="__blank"
>
  <div
    className="css-zjwx56-Item"
  >
    <div
      className="css-1f1qa1o"
    >
      test
    </div>
    <div
      className="css-1npim7z-Item"
    >
      <div
        className="css-adtgxk"
      >
        <img
          alt=""
          className="css-e4eikt"
          src="avatar.com"
        />
        <div>
          login
        </div>
      </div>
      <div
        className="css-iazxl9"
      >
        <div
          className="css-10lwzoi"
        />
        JavaScript
      </div>
      <div
        className="css-1cyy2lc"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-star fa-w-18 css-1gkn1fq-Item"
          data-icon="star"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        100
      </div>
    </div>
  </div>
  <div
    className="css-1y4ob8d"
  >
    Testing
  </div>
</a>
`;

exports[`Item tests should render an item with no owner 1`] = `
<a
  className="css-arizad"
  href="testurl.com"
  target="__blank"
>
  <div
    className="css-zjwx56-Item"
  >
    <div
      className="css-1f1qa1o"
    >
      test
    </div>
    <div
      className="css-1npim7z-Item"
    >
      <div
        className="css-iazxl9"
      >
        <div
          className="css-10lwzoi"
        />
        JavaScript
      </div>
      <div
        className="css-1cyy2lc"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-star fa-w-18 css-1gkn1fq-Item"
          data-icon="star"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        100
      </div>
    </div>
  </div>
  <div
    className="css-1y4ob8d"
  >
    Testing
  </div>
</a>
`;

exports[`Item tests should render empty item 1`] = `
<a
  className="css-arizad"
  target="__blank"
>
  <div
    className="css-zjwx56-Item"
  >
    <div
      className="css-1f1qa1o"
    />
    <div
      className="css-1npim7z-Item"
    >
      <div
        className="css-iazxl9"
      />
      <div
        className="css-1cyy2lc"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-star fa-w-18 css-1gkn1fq-Item"
          data-icon="star"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="css-1y4ob8d"
  />
</a>
`;
